# libcstring

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  configure.ac  libcstring-wiki.ini  libcstring.ini  libcstring.pc.in  libcstring.spec.in  synclibs.ps1  synclibs.sh
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libcstring.h.in
include/libcstring/: definitions.h.in  extern.h  features.h.in  types.h.in
libcstring/: Makefile.am  libcstring.c  libcstring.rc.in  libcstring_definitions.h.in  libcstring_extern.h  libcstring_narrow_string.h  libcstring_support.c  libcstring_support.h  libcstring_system_string.h  libcstring_types.h  libcstring_unused.h  libcstring_wide_string.c  libcstring_wide_string.h
manuals/: Makefile.am  libcstring.3
msvscpp/: Makefile.am  libcstring.sln
msvscpp/cstring_test_get_version/: cstring_test_get_version.vcproj
msvscpp/cstring_test_support/: cstring_test_support.vcproj
msvscpp/libcstring/: libcstring.vcproj
po/: ChangeLog
tests/: Makefile.am  cstring_test_get_version.c  cstring_test_libcstring.h  cstring_test_macros.h  cstring_test_support.c  cstring_test_unused.h  test_library.ps1  test_library.sh
